Use latest for all examples

--- a/examples/textarea/public/index.html
+++ b/examples/textarea/public/index.html
@@ -39,7 +39,7 @@ It can even help when you wanna refine ur slang or formality level. That's espec
     </textarea>
     <script
       type="module"
-      src="https://unpkg.com/@grammarly/textarea@latest?module"
+      src="https://cdn.jsdelivr.net/npm/@grammarly/textarea@latest/+esm"
     ></script>
   </body>
 </html>
