fix: use @0 to avoid jsdelivr caching
https://github.com/jsdelivr/jsdelivr/issues/18063

--- a/examples/textarea/public/index.html
+++ b/examples/textarea/public/index.html
@@ -18,6 +18,7 @@
         line-height: 1.4;
         font-family: sans-serif;
         resize: none;
+        display: block;
       }
     </style>
   </head>
@@ -39,7 +40,7 @@ It can even help when you wanna refine ur slang or formality level. That's espec
     </textarea>
     <script
       type="module"
-      src="https://cdn.jsdelivr.net/npm/@grammarly/textarea@latest/+esm"
+      src="https://cdn.jsdelivr.net/npm/@grammarly/textarea@0/+esm"
     ></script>
   </body>
 </html>
