input example style improvements

--- a/examples/input/public/index.html
+++ b/examples/input/public/index.html
@@ -12,12 +12,10 @@
         box-sizing: border-box;
       }
 
-      textarea {
-        width: 100%;
-        padding: 16px;
-        line-height: 1.4;
+      input {
+        width: 400px;
+        padding: 8px 12px;
         font-family: sans-serif;
-        resize: none;
       }
     </style>
   </head>
@@ -28,10 +26,12 @@
       value="Mispellings and grammatical errors can effect your credibility."
       data-grammarly
       data-client-id="5c891c34-55b1-4504-b1a2-5215d35757ba"
+      data-offset-x="36"
+      data-offset-y="3"
     />
     <script
       type="module"
-      src="https://cdn.jsdelivr.net/npm/@grammarly/textarea@latest/+esm"
+      src="https://cdn.jsdelivr.net/npm/@grammarly/textarea@0/+esm"
     ></script>
   </body>
 </html>
