chore: update editor-sdk example to use unpkg
for consistency with docs

--- a/examples/editor-sdk/public/index.html
+++ b/examples/editor-sdk/public/index.html
@@ -73,6 +73,6 @@ It can even help when you wanna refine ur slang or formality level. That's espec
       </p>
     </div>
 
-    <script src="https://js.grammarly.com/grammarly-editor-sdk@latest?clientId=5c891c34-55b1-4504-b1a2-5215d35757ba"></script>
+    <script src="https://unpkg.com/@grammarly/editor-sdk?clientId=5c891c34-55b1-4504-b1a2-5215d35757ba"></script>
   </body>
 </html>
